# backtrader

./: .gitignore  requirements.txt
backtrader/ctp/: __init__.py  ctp_gateway.py  ctpbroker.py  ctpfeed.py  ctpstore.py
backtrader/ctp/api/ctp/: CMakeLists.txt
backtrader/ctp/api/ctp/vnctp/vnctpmd/: vnctpmd.cpp
backtrader/ctp/api/ctp/vnctp/vnctptd/: vnctptd.cpp
backtrader/plot/: locator.py
backtrader/vnpy/api/ctp/vnctp/vnctpmd/: vnctpmd.h
backtrader/vnpy/api/ctp/vnctp/vnctptd/: vnctptd.h
backtrader/vnpy/gateway/ctp/: ctp_gateway.py
backtrader/vnpy/trader/: event.py  gateway.py
docker/: Dockerfile  build.sh  requirements.txt  run.sh
samples/ctptest/: ctptest.py  test-case.sh
